[package]
name = "trane-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "trane_server"

[dependencies]
actix-web = "4"
anyhow = "1"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
trane = "0.19.0"
ustr = "0.9.0"
